--- a/src/App.css
+++ b/src/App.css
@@ -20,19 +20,18 @@
     margin: 1rem;
     border-radius: .6rem;
     border: 3px solid;
-    border-color: #EF9A4B;
+    border-color: #9A9DA0;
     display: flex;
     flex-direction: column;
     row-gap: .5rem;
     align-content: space-between;
-    color: #EF9A4B;
+    color: #9A9DA0;
     background-color: #2E3440;
 }
 
 .searchBar{
     float: right;
-    display: flex;
-    
+    display: flex; 
 }
 
 .footerIcon{display: inline-block; padding: 0px 12px}
