--- a/src/Timeline.scss
+++ b/src/Timeline.scss
@@ -84,8 +84,7 @@ p {
             background: $timeline-body-bg;
             border-radius: $timeline-body-round;
             padding: 20px 20px 15px;
-            box-shadow: $timeline-body-shadow;
-
+            box-shadow: 0 -1rem 3rem #1d1e2e;
             &:before {
                 content: '';
                 background: inherit;
