--- a/src/Timeline.scss
+++ b/src/Timeline.scss
@@ -14,6 +14,7 @@ $secondary: #4f537b;
 
 $internship: #df4576;
 $partTime: #bb86fc;
+$fullTime: #57c037;
 
 // timeline variables
 $body-bg: #1e1e2f;
@@ -125,6 +126,15 @@ p {
             }
             .timeline-icon {   
                 border: 2px solid $internship;
+            }
+        }
+
+        &.fullTime {
+            .badge{
+                background:$fullTime;
+            }
+            .timeline-icon {   
+                border: 2px solid $fullTime;
             }
         }
 
